--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,9 +1,37 @@
 @import "bootstrap/dist/css/bootstrap.min.css";
 
+:root {
+    --ivory: #FBF8F7;
+    --tuscany: #B09398;
+    --dark-electric-blue: #5A738A;
+    --old-mauve: #6D2E46;
+    --dark-junge-green: #0D160B;
+    --xanadu: #667761;
+}
+
+
+html {
+    width: 100%;
+    max-width: 100%;
+}
+
+body {
+    background-color: var(--ivory) !important;
+    width: 100%;
+    max-width: 100%;
+    height: 100%;
+}
+
 #app {
+}
+
+.nav {
+    background-color: var(--ivory) !important;
+    border-bottom: 1px solid var(--dark-electric-blue);
 }
 
 .h1 {
     padding-bottom: 12px;
     border-bottom: 1px solid grey;
 }
+
